--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
         <title>Bikcraft - Bicicletas Elétricas</title>
 
         <link rel="stylesheet" href="assets/css/style.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link
+            rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin="crossorigin">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+            rel="stylesheet">
+
     </head>
     <body>
+
         <header class="header-bg">
             <div class="header">
                 <a href="./">
                     <img src="/assets/img/bikcraft.svg" alt="Bikcraft">
                 </a>
                 <nav aria-label="primaria">
-                    <ul class="header-menu">
+                    <ul class="header-menu cor-0">
                         <li>
                             <a href="bicicletas.html">Bicicletas</a>
                         </li>
@@ -29,5 +40,23 @@
                 </nav>
             </div>
         </header>
+
+        <main class="introducao-bg">
+            <div class="introducao">
+                <div class="introducao-conteudo">
+                    <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span>.</span></h1>
+                    <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para
+                        você. Explore o mundo na sua velocidade com a Bikcraft<span>.</span>
+                    </p>
+                    <a class="botao" href="bicicletas.html">Escolha a sua</a>
+                </div>
+                <div>
+                    <img src="/assets/img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
+                </div>
+            </div>
+        </main>
+
+        <h2 class="texto-grande">escolha a sua<span class="">.</span></h2>
+
     </body>
 </html>
