--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main class="introducao-bg">
             <div class="introducao">
                 <div class="introducao-conteudo">
-                    <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span>.</span></h1>
+                    <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
                     <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para
                         você. Explore o mundo na sua velocidade com a Bikcraft<span>.</span>
                     </p>
@@ -56,7 +56,7 @@
             </div>
         </main>
 
-        <h2 class="texto-grande">escolha a sua<span class="">.</span></h2>
+        <h2 class="texto-grande">escolha a sua<span class="cor-p1">.</span></h2>
 
     </body>
 </html>
